# promptsapi

./: License  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/promptsapi/: __init__.py  client.py
tests/: test_client.py
