[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsapi"
version = "0.1.0"
authors = [
  { name="simpaisush", email="info@promptsgenerator.ai" },
]
description = "A client library for the prompts-testing API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1"
]

[project.urls]
"Homepage" = "https://github.com/your-github-username/promptsapi"
"Bug Tracker" = "https://github.com/your-github-username/promptsapi/issues"
